--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular2-goldilocks-seed",
-  "version": "2.1.2",
-  "description": "A seed project for Angular 2 / TypeScript development",
+  "name": "angular2-heroes",
+  "version": "0.1",
+  "description": "",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ColinEberhardt/angular2-goldilocks-seed.git"
   },
-  "author": "ceberhardt@scottlogic.com",
+  "author": "alanwright47@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ColinEberhardt/angular2-goldilocks-seed/issues"
@@ -21,12 +21,12 @@
     "gulp-typescript": "^2.8.0"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.6",
+    "angular2": "2.0.0-beta.17",
     "systemjs": "0.19.6",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10"
+    "zone.js": "0.5.14"
   }
 }
